# dasfc-pointcloud-measurement

./: .gitignore  CITATION.cff  LICENSE  MANIFEST_SHA256.txt  README.md  pyproject.toml
research/: __init__.py
research/measurement_q2/: __init__.py
research/measurement_q2/configs/: formal_v1.json  p0_p3_protocol.json  p4_submission_strengthening_v1.json  rockfall_algorithm_protocol_v1.json  rockfall_physical_protocol_v1.json  rockfall_physical_protocol_v1_1.json  shrec2019_exploratory_protocol_v1.json  shrec2019_exploratory_protocol_v1_1.json
research/measurement_q2/manuscript/: CITATION_MAP.md  SUPPLEMENTARY_METHODS.md  highlights.txt  manuscript_v1.md  references.bib
research/measurement_q2/pcudm/: __init__.py  calibration.py  estimator.py  metrics.py  registration_frontends.py  scale_model.py  simultaneous_baselines.py  synthetic.py
research/measurement_q2/protocols/: ALGORITHM_SPEC.md  EXPERIMENT_PROTOCOL.md  P0_P3_PREREGISTERED_PROTOCOL.md  P4_SUBMISSION_STRENGTHENING_PROTOCOL_20260722.md  PUBLIC_DATASETS.md  RESULTS_FACT_SHEET.md  ROCKFALL_D4_D5_ALGORITHM_PROTOCOL_20260721.md  ROCKFALL_PHYSICAL_VALIDATION_PROTOCOL_20260721.md  SHREC2019_EXPLORATORY_PROTOCOL_20260721.md
research/measurement_q2/reproducibility/: FINAL_INTEGRITY_REPORT_P4_20260722.md  STAGE4_5_SIMULATED_REVIEW_P4_20260722.md  evidence_manifest_final.json  figure_qa_compressed_20260721.json  figure_qa_p4_archive_final_20260722.json  integrity_audit_compressed_20260721.json  integrity_audit_doi_20260722.json  integrity_audit_p4_archive_final_20260722.json  language_qa_compressed_20260721.json  (+9 more)
(+75 files in other folders)
